# Snapchat_Auto

./: .gitignore  CLAUDE.md  DONE.md  LICENSE  README.md  Snapchat_Auto.py  Snapchat_Auto_v1.2.1.py  TODO.md  build_nuitka.cmd  pyproject.toml  requirements copy.txt  requirements.txt
docs/: cross_report_linking.md  forensics_tool_guidelines.md  pandas3_python314_compat.md  report_cache_controller.md  report_communications.md  report_memories.md  snapchat_ios_memories_decryption.md
scripts/: DecryptLocalMemories_iOS.py  ParseSnapchat_iOS.py  cache_controller_report.py  getCacheAndroid.py  memories_media_report.py  parseSnapvideos_PREFETCH.py
scripts/data/: extract_zip.py
tests/: test_parse_snapchat_ios.py
