[project]
    name = "Snapchat_Auto"
    version = "1.4.0"
    description = "Add your description here"
    readme = "README.md"
    requires-python = ">=3.14,<3.15"
    dependencies = [
        "blackboxprotobuf",
        "filetype",
        "opencv-python",
        "pandas",
        "pillow",
        "pyasn1",
        "pycryptodome",
        "requests",
        "freesimplegui",
        "nuitka",
        "my-tools",
    ]


    [project.optional-dependencies]
        # Any one of these provides an in-process SQLCipher binding for decrypting
        # gallery.encrypteddb (old storage schema). Install whichever has wheels for your
        # platform; scripts/memories_media_report.py picks up any of them, and falls back
        # to scripts/data/sqlcipher3.exe when none is present.
        sqlcipher3 = [
            "sqlcipher3",
        ]
        sqlcipher3-binary = [
            "sqlcipher3-binary",
        ]
        sqlcipher3-wheels = [
            "sqlcipher3-wheels",
        ]

    [project.scripts]
        build = "my_tools.build_wix_installer:main"

[tool.uv]
    package = true

    [tool.uv.sources]
        nuitka   = { url = "https://github.com/Nuitka/Nuitka/archive/main.zip" }
        my-tools = { path = "../../MyGitHub/Python/my_modules/my_tools", editable = true }

[tool.setuptools.packages.find]
    where   = ["."]
    include = ["scripts*"]

[tool.msi]
    upgrade_code = "E873CA5B-EB6F-4A47-9038-118D37FC1950"

[tool.wix-nuitka]
    windows_console_mode = "disable"
    entry_point          = "Snapchat_Auto.py"
    plugins              = ["tk-inter"]
